======================
# MiniZinc Changelog #
======================

All bug numbers refer to the issue tracker at
https://github.com/MiniZinc/libminizinc/issues

Version 2.1.3
=============

Bug fixes:
 - Fix return type computation for functions where return type contains
   enums.
 - Check finiteness of float literals and bounds. Fixes #138.
 - More checks for function return values. Fixes #136.
 - Fix var int comprehensions (now triggers error message instead of crash
   for var set of int comprehensions). Fixes #135.
 - Fix output of variables with quoted identifiers.
 - Fix flattening of let expressions that contain variables with undefined
   (i.e., partial) right hand side.
 - Make printing of error messages to stdout or stderr more consistent
   across executables.
 - Fix type checking of initialisation of enum types.
 - Improve error messages for array access and index set errors. Fixes #131.
 - Fix definition of multi-dimensional element constraints to impose
   correct bounds on index variables.
 - Fix binding analysis during type checking, which did not handle the
   shadowing of top-level declarations by comprehension generators correctly.
   Fixes #129.

Version 2.1.2
=============

Bug fixes:
 - Fix a bug in the type checking for generators that iterate over
   arrays of enums.
 - Fix a bug in the output handling of arrays of enums.
 - Fix handling of multiple output items (only the last item was
   compiled, now the concatenation is used for output as defined
   in the specification).

Version 2.1.1
=============

Changes:
 - Add missing min/max functions for set variables. Can be redefined to solver
   builtins using the new redefinitions-2.1.1.mzn library file.
 - Add support for option type expressions as objective functions.
 - Automatically coerce arrays constructed using ++ to any enum index set
   (in addition to array literals and comprehensions).

Bug fixes: