@@ -9,6 +9,7 @@ Version 2.1.3
 =============
 
 Bug fixes:
+ - Don't output newline if user-defined solution separator or status message is empty
  - Fix return type computation for functions where return type contains
    enums.
  - Check finiteness of float literals and bounds. Fixes #138.
